sidebar visible issue fix

--- a/scss/new.scss
+++ b/scss/new.scss
@@ -42,6 +42,7 @@ $screen-xs: 320px;
   left: 0;
   top: 0;
   width: 100%;
+  z-index: 500;
 
   @include screen($screen-lg) {
     display: block;
@@ -145,6 +146,7 @@ $screen-xs: 320px;
   padding: 10px 5px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  z-index: 1000;
   img {
     width: 22px;
   }
